apps/loadtester/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: loadtester
spec:
  type: ExternalName
  externalName: oauth2-proxy.keycloak.svc.cluster.local
  ports:
    - port: 4180
